[project]
name = "code-review-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Steve",email = "stevemajou@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "openai (>=1.106.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "code_review_assistant", from = "src"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
